type consistency checking for custom files