@@ -301,6 +301,14 @@
                             </jvmArgs>
                         </launcher>
                         <launcher>
+                            <id>TypeConsistencyCheckManual</id>
+                            <mainClass>org.dbpedia.extraction.scripts.TypeConsistencyCheckManual</mainClass>
+                            <jvmArgs>
+                                <jvmArg>-server</jvmArg>
+                                <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
+                            </jvmArgs>
+                        </launcher>
+                        <launcher>
                             <id>TypeStatistics</id>
                             <mainClass>org.dbpedia.extraction.statistics.TypeStatistics</mainClass>
                             <jvmArgs>
